# ppx-matches

./: .gitignore  CHANGELOG.md  README.md  dune-project  flake.nix  ppx_matches.opam
.github/workflows/: ci.yml  opam-ci.yml
nix/: ppx-matches.nix
src/: dune  ppx_matches.ml
test/: gen_dune_rules.ml
test/errors/: binding_pat.expected  binding_pat.ml  dune  dune.inc
test/passing/: dune  dune.inc  matches.expected  matches.ml  matches_inline.expected  matches_inline.ml
